--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -29,7 +29,7 @@
   left: 0
   width: 100%
   height: 100%
-  background: url(banner-url) center #000
+  background: url(banner-url) 0% 70% #000
   background-size: cover
   z-index: -1
 
@@ -68,7 +68,7 @@ $logo-text
 
 $nav-link
   float: left
-  color: #fff
+  color: #333
   opacity: 0.6
   text-decoration: none
   text-shadow: 0 1px rgba(0, 0, 0, 0.2)
